--- a/style.css
+++ b/style.css
@@ -1,43 +1,84 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 body{
+    background: #000;
     font-family: Arial, Helvetica, sans-serif;
-    background: rgb(36, 35, 35);
-    color: #fff;
 }
 
-.nav_container{
-    padding: 30px;
+.padding__container{
+    padding: 0 10px;
+}
+.margin__container{
+    margin: 0 15px;
+}
+
+.time{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-}
-
-.nav_container h2{
-    font-size: 35px;
-    background: linear-gradient(#ff84ea, #9abbf8);
-    padding: 5px;
-    border-radius: 5px;
-}
-
-#clear{
-    background-color: rgb(182, 38, 38);
+    width: 100%;
+    height: 300px;
+    font-size: 90px;
     color: #fff;
-    border: 1px solid #fff;
-    border-radius: 5px;
-    padding: 15px;
-    font-weight: 400;
 }
 
-#cvs{
-    display: block;
-    margin: 0 auto;
-    width: 95%;
-    height: 700px;
-    background-color: #fff;
-    border-radius: 5px;
+.buttons{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    border-bottom: 2px solid rgb(48, 47, 47);
+}
+.buttons button{
+    width: 80px;
+    height: 80px;
+    
+    font-size: 18px;
+
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.mainLap{
+    border-radius: 50%;
+    border: 3px solid rgb(48, 47, 47);
+    padding: 3px;
+}
+
+.mainStart{
+    border-radius: 50%;
+    border: 3px solid rgb(26, 66, 22);
+    padding: 3px;
+}
+
+.mainStop{
+    border-radius: 50%;
+    border: 3px solid rgb(107, 6, 6);;
+    padding: 3px;
+}
+
+.startBtn{
+    background: rgb(26, 66, 22);
+    color: rgb(57, 124, 52);
+}
+
+.stopBtn{
+    background: rgb(107, 6, 6);
+    color: rgb(197, 12, 12);
+}
+.lapBtn{
+    background: rgb(48, 47, 47);
+    color: #fff;
+}
+
+.lap { 
+    display: flex;
+    justify-content: space-between;
+    color:#fff;
+    margin-top: 10px;
+    font-size: 18px;
 }
